step4/frontend/k8s/monapp-dd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monapp-dd-svc
  namespace: packapp02
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 95
    targetPort: 8080
    protocol: TCP
  selector:
    app: monapp-dd
